--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "An experiment in learning GraphQL using React/Node.js/MongoDB.",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
