--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.15"
   },
   "devDependencies": {
